--- a/01_ReportsApp/src/main/resources/application.properties
+++ b/01_ReportsApp/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.jpa.hibernate.ddl-auto=update
 #Google SMTP server details
 spring.mail.host= smtp.gmail.com
 spring.mail.port= 587
-spring.mail.username=xxxx
-spring.mail.password=xxxx
+spring.mail.username=riyavermawus2@gmail.com
+spring.mail.password=jmsdbmpddttmbxmi
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
